--- a/package.json
+++ b/package.json
@@ -14,9 +14,13 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@fullcalendar/core": "^6.1.15",
+    "@fullcalendar/daygrid": "^6.1.15",
+    "@fullcalendar/interaction": "^6.1.15",
+    "@fullcalendar/timegrid": "^6.1.15",
+    "@fullcalendar/vue3": "^6.1.15",
     "pinia": "^2.1.7",
     "vue": "^3.4.29",
-    "vue-cal": "^4.9.0",
     "vue-router": "^4.3.3"
   },
   "devDependencies": {
